# mini-postman

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: GITHUB_PUBLISHING.md  PACKAGING.md
src/: App.tsx  main.tsx  monaco.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_normalize_auth_type.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: curl.rs  http.rs  mod.rs
src/components/common/: EnvironmentSelector.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TabBar.tsx
src/components/request/: AuthEditor.tsx  BodyEditor.tsx  KeyValueTable.tsx  MethodUrlBar.tsx  RequestBuilder.tsx  SaveRequestModal.tsx
src/components/response/: ResponseBody.tsx  ResponseHeaders.tsx  ResponseViewer.tsx
src/components/sidebar/: CollectionTree.tsx  HistoryList.tsx  WorkspaceSwitcher.tsx
src/constants/: http.ts
src/contexts/: EnvironmentContext.tsx  TabContext.tsx  ThemeContext.tsx  WorkspaceContext.tsx
src/i18n/: config.ts  en.json  zh.json
src/services/: auth.ts  database.ts  httpClient.ts  importExport.ts  variableResolver.ts
src/styles/: global.css  variables.css
src/types/: index.ts
src/utils/: keyValue.ts
